# qplotter

./: .gitignore  CMakeLists.txt
src/qplotter/: CMakeLists.txt  application.cpp  application.hpp  check_list.hpp  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  marks_plot.cpp  marks_plot.hpp  qwt_plot_extcurve.cpp  qwt_plot_extcurve.hpp  qwt_plot_picker_ext.cpp  qwt_plot_picker_ext.hpp  qwt_point_ext.cpp  qwt_point_ext.hpp  qwt_series_data_ext.cpp  qwt_series_data_ext.hpp  surok_exchange.cpp  surok_exchange.hpp  surok_marks_plotter.cpp  surok_marks_plotter.hpp  surok_marks_plotter.ui  surok_preprocessing.cpp  surok_preprocessing.hpp  surok_preprocessing.ui
